[package]
name = "blueprince-numeric-core"
version = "1.0.0"
edition = "2024"
authors = ["BlackShark <blacksharkfr@yahoo.fr>"]
license = "MIT"

[dependencies]
bitflags = "2.10.0"
crossterm = "0.29.0"
derive_more = { version = "2.1.1", features = ["display"] }
itertools = "0.14.0"
ratatui = "0.30.0"
