[package]
name = "blueprince-numeric-core"
description = "A program to solve puzzles from the video game Blue Prince"
version = "1.2.0"
edition = "2024"
authors = ["BlackShark <blacksharkfr@yahoo.fr>"]
license = "MIT"

[dependencies]
bitflags = "2.10.0"
clap = { version = "4.5.54", features = ["derive"] }
crossterm = "0.29.0"
derive_more = { version = "2.1.1", features = ["display", "error"] }
itertools = "0.14.0"
ratatui = "0.30.0"
rayon = "1.11.0"

[profile.release]
lto = true
opt-level = "z"
